# sd-payment-system-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py
src/: __init__.py
src/payment/: __init__.py  config.py  database.py  main.py  redis.py
src/payment/models/: ledger_entry.py  outbox.py  payment_intent.py  webhook_event.py
src/payment/routers/: __init__.py  authorize.py  capture.py  payment_intents.py  refund.py  webhooks.py
src/payment/schemas/: ledger.py  payment_intent.py  refund.py  webhook.py
src/payment/services/: __init__.py  authorize_service.py  capture_service.py  intent_service.py  ledger_service.py  psp_adapter.py  refund_service.py  webhook_service.py
src/payment/workers/: outbox_worker.py
verify/: __init__.py  manifest.env
verify/acceptance/: __init__.py  conftest.py  test_fr1_create_payment_intent.py  test_fr2_authorize_capture.py  test_fr3_view_payment_intent.py  test_fr4_refund.py  test_fr5_ledger_verify.py  test_fr6_webhooks.py  test_healthz.py
