[project]
name = "payment-system"
version = "0.1.0"
description = "Payment System MVP — core payment lifecycle backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "pydantic-settings>=2.4,<3.0",
    "pydantic>=2.7,<3.0",
    "alembic>=1.13,<2.0",
    "redis[hiredis]>=5.1,<6.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "verify/acceptance"]
asyncio_mode = "auto"
